--- a/src/styles/HomeSection.css
+++ b/src/styles/HomeSection.css
@@ -178,7 +178,7 @@
   }
 
   .home-container {
-    margin: 40px auto -30px auto;
+    margin: 40px auto 0 auto;
     width: 90%;
     height: 600px;
   }
@@ -189,7 +189,7 @@
   }
 
   .home-intro {
-    font-size: 2.5rem;
+    font-size: 2.4rem;
     margin: 0 0 0 10px;
   }
 
